<resources>

    <!-- general -->
    <string name="app_name">case</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="error">Hata</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="ok">Tamam</string>
    <string name="success">Başarılı</string>

    <!-- Register -->
    <string name="please_fill_in_all_fields">Lütfen tüm alanları doldurun</string>
    <string name="registration_successful">Kayıt Başarılı</string>
    <string name="registration_failed">Kayıt Başarısız</string>
    <string name="adding_to_firestore_failed">Firestore ekleme başarısız</string>
    <string name="register">Kayıt Ol</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="register_failed">Lütfen bilgileri kontrol ediniz.</string>

    <!-- Login -->
    <string name="email">E-Mail</string>
    <string name="address">Adres</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş yap</string>
    <string name="login_success">Giriş Başarılı</string>
    <string name="login_failed">Giriş Başarısız</string>
    <string name="login_error">Eksik veya hatalı bilgi girdiniz</string>


    <!-- Navigation -->
    <string name="profile">Profil</string>
    <string name="home">Anasayfa</string>
    <string name="basket">Sepet</string>
    <string name="splash">Splash</string>

    <!-- Basket -->
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="total_amount">Toplam Ücret</string>
    <string name="price">Fiyat: %.2f %s</string>
    <string name="delete_product">Ürünü Sil</string>
    <string name="basket_is_empty">Sepetiniz boş</string>
    <string name="are_you_sure_delete_product">Bu ürünü silmek istediğinize emin misiniz ? </string>
    <string name="add_to_basket_success">Ürün sepete eklendi</string>
    <string name="order_success">Sipariş başarıyla alındı.</string>
    <string name="product_color">Ürün rengi: %1$s</string>
    <string name="total_amount_basket">Toplam Ücret:</string>
    <string name="complete_your_purchase">Satın alma işlemini tamamla</string>

    <!-- Profile -->
    <string name="logout">Çıkış yap</string>
    <string name="update">Güncelle</string>
    <string name="profile_updated_successfully">Profile güncellemesi başarılı</string>
    <string name="orders">Siparişler</string>
    <string name="edit_profile">Profili düzenle</string>

    <!-- Products -->
    <string name="product_name">Ürün adı: %1$s</string>

    <!-- Edit Password -->
    <string name="current_password">Mevcut şifre</string>
    <string name="new_password">Yeni şifre</string>
    <string name="new_password_again">Yeni şifre tekrar</string>
    <string name="change_password">Şifreyi değiştir</string>
    <string name="change_password_success">Şifre değiştirme başarılı</string>
    <string name="fill_in_all_fields">Tüm alanları doldurun</string>
    <string name="new_passwords_do_not_match">Yeni şifreler eşleşmiyor</string>
    <string name="password_could_not_be_changed">Şifre değiştirilemedi:</string>
    <string name="current_password_is_incorrect">Mevcut şifre yanlış</string>
    <string name="must_be_at_least_six_characters_long">Şifre en az 6 karakter olmalıdır</string>

    <!-- Payment -->
    <string name="card_number">Kart numarası</string>
    <string name="expiration_date">Son Kullanma Tarihi (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="pay">Ödeme yap</string>
    <string name="total_amount_payment">Toplam Ücret : %1$s</string>


    <!-- Orders -->
    <string name="order_price">Fiyat : %1$s %2$s</string>
    <string name="order_date">Sipariş tarihi : %1$s</string>
    <string name="order_address">Adres : %1$s</string>
    <string name="failed_to_fetch_orders">Siparişler getirilemedi</string>

    <!-- Product Detail -->
    <string name="product_added">Ürün sepete eklendi: %1$s</string>

</resources>