<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@color/teal_700"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/name"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/surname"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/address"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"/>
</LinearLayout>
