<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@color/teal_700"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:text="@string/register"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:textColor="@color/teal_700"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fmProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/shape_ring_proggres"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"/>
    </FrameLayout>

</FrameLayout>
